# rate_things

./: README.md  conftest.py  pyproject.toml  rate_things.db  testing.db
.github/workflows/: main.yaml
rate_things/: __main__.py  api.py  cli.py  config.py  core.py  database.py  models.py  serializers.py  settings.toml
scoring_things/: __main__.py  config.py  database.py  models.py  settings.toml
tests/: test_core.py  test_functional_api.py  test_functional_cli.py
