[tool.poetry]
name = "rate_things"
version = "0.1.0"
description = "Um app para dar notas a coisas"
authors = ["Joey-Resende <givanildo.resende@gmail.com>"]
include =["rate_things/settings.toml"]

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.6"
fastapi = "^0.75.2"
typer = "^0.4.1"
rich = "^12.3.0"
dynaconf = "^3.1.8"
flake8 = "^4.0.1"
blue = "^0.9.0"
uvicorn = "^0.17.6"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
prospector = "^1.7.7"
pytest = "^7.1.2"

[tool.poetry.scripts]
rate_things = "rate_things.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
